--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,25 @@
 	  <maven.compiler.source>1.8</maven.compiler.source>
 	  <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+   <build>
+  <finalName>sample_jarfile</finalName>
+  <plugins>
+    <plugin>
+      <!-- Build an executable JAR test ABC-->
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.1.0</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <classpathPrefix>lib/</classpathPrefix>
+            <mainClass>naveen.myMainCalc</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
+    </plugin>
+  </plugins>
+  </build>  
+  
 </project>
